# compiler flags
CFLAGS = -Wall -c -g 
AM_CXXFLAGS = -Wall -c -g 
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = scan_handler source spectrum storage_manager text_store \
tree unicode_decompositions xml_handler xml_loader xml_scanner xml_store xml_term

scan_handler_SOURCES = scan_handler.h scan_handler.cpp
source_SOURCES = source.h source.cpp
spectrum_SOURCES = spectrum.h spectrum.cpp
storage_manager_SOURCES = storage_manager.h storage_manager.cpp
text_store_SOURCES = text_store.h text_store.cpp
tree_SOURCES = tree.h tree.cpp
unicode_decompositions_SOURCES = unicode_decompositions.h unicode_decompositions.cpp
xml_handler_SOURCES = xml_handler.h xml_handler.cpp
xml_loader_SOURCES = xml_loader.h xml_loader.cpp
xml_scanner_SOURCES = xml_scanner.h xml_scanner.cpp
xml_store_SOURCES = xml_store.h xml_store.cpp
xml_term_SOURCES = xml_term.h xml_term.cpp

