# compiler flags
CFLAGS = -Wall -c -g 
AM_CXXFLAGS = -Wall -c -g 
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = parsenodes symbol_table xquery_driver

parsenodes_SOURCES = parsenodes.h parsenodes.cpp
symbol_table_SOURCES = symbol_table.h symbol_table.cpp
xquery_driver_SOURCES = xquery_driver.h xquery_driver.cpp

