# compiler flags
CFLAGS = -Wall -c -g
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = content_handler var_iterator binary_iterator

binary_iterator_SOURCES = binary_iterator.h binary_iterator.cpp
content_handler_SOURCES = content_handler.h content_handler.cpp
var_iterator_SOURCES = var_iterator.h var_iterator.cpp

