# compiler flags
CFLAGS = -Wall -c -g 
CXXFLAGS = -Wall -c -g 
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = collation_resolver collection_resolver module_resolver \
schema_resolver uri_resolver url_canonicalizer xml_istream xml_ostream

collation_resolver_SOURCES = collation_resolver.h collation_resolver.cpp
collection_resolver_SOURCES = collection_resolver.h collection_resolver.cpp
module_resolver_SOURCES = module_resolver.h module_resolver.cpp
schema_resolver_SOURCES = schema_resolver.h schema_resolver.cpp
uri_resolver_SOURCES = uri_resolver.h uri_resolver.cpp
url_canonicalizer_SOURCES = url_canonicalizer.h url_canonicalizer.cpp
xml_istream_SOURCES = xml_istream.h xml_istream.cpp
xml_ostream_SOURCES = xml_ostream.h xml_ostream.cpp

